Put in post, and hbs

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vallejoj/articles-products-and-express#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bytes": "^2.5.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0"
   }
