--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bytes": "^2.5.0",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
-    "method-override": "^2.3.9"
+    "method-override": "^2.3.9",
+    "pg-promise": "^6.3.6"
   }
 }
